--- a/requirements.txt
+++ b/requirements.txt
@@ -65,5 +65,5 @@ traitlets==5.0.5
 urllib3==1.26.3
 wcwidth==0.2.5
 webencodings==0.5.1
+whitenoise==5.2.0
 widgetsnbextension==3.5.1
-psycopg2==2.8.6
