--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
+psycopg2==2.8.6
 ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.8.0
