--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,53 @@
+appdirs==1.4.4
 argon2-cffi==20.1.0
 asgiref==3.3.1
 async-generator==1.10
 attrs==20.3.0
+Automat==0.8.0
 backcall==0.2.0
+black==20.8b1
 bleach==3.3.0
+blinker==1.4
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+click==7.1.2
+cloud-init==20.4
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+dbus-python==1.2.16
 decorator==4.4.2
 defusedxml==0.7.0
+distro==1.4.0
+distro-info===0.23ubuntu1
 dj-database-url==0.5.0
 Django==3.1.7
 django-ckeditor==6.0.0
+django-extensions==3.1.1
+django-filter==2.4.0
 django-js-asset==1.2.2
+djangorestframework==3.12.2
+drf-extensions==0.7.0
 entrypoints==0.3
+flake8==3.8.4
 gunicorn==20.0.4
+html5lib==1.0.1
+httplib2==0.14.0
+hyperlink==19.0.0
 idna==2.10
+importlib-metadata==1.5.0
+incremental==16.10.1
 ipykernel==5.5.0
 ipython==7.21.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==2.11.3
+jsonpatch==1.22
+jsonpointer==2.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.11
@@ -30,41 +56,84 @@ jupyter-core==4.7.1
 jupyter-tabnine==1.2.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mistune==0.8.4
+more-itertools==4.2.0
+mypy-extensions==0.4.3
 nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
+netifaces==0.10.4
 notebook==6.2.0
+oauthlib==3.1.0
 packaging==20.9
 pandocfilters==1.4.3
 parso==0.8.1
+pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 ptyprocess==0.7.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycodestyle==2.6.0
 pycparser==2.20
+pyflakes==2.2.0
 Pygments==2.8.0
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
+pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.4
 python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
 pytz==2021.1
+PyYAML==5.3.1
 pyzmq==22.0.3
 qtconsole==5.0.2
 QtPy==1.9.0
+regex==2020.11.13
 requests==2.25.1
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
 Send2Trash==1.5.0
+service-identity==18.1.0
+simplejson==3.16.0
 six==1.15.0
+sos==4.0
 sqlparse==0.4.1
+ssh-import-id==5.10
+systemd-python==234
 terminado==0.9.2
 testpath==0.4.4
+toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
+Twisted==18.9.0
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+ubuntu-advantage-tools==20.3
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.26.3
+wadllib==1.3.3
 wcwidth==0.2.5
 webencodings==0.5.1
 whitenoise==5.2.0
 widgetsnbextension==3.5.1
+zipp==1.0.0
+zope.interface==4.7.1
